# Operant

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
operant/app/: main.py
operant/app/api/: deps.py
operant/app/api/v1/: auth.py  organizations.py  projects.py  tasks.py  users.py
operant/app/core/: config.py  errors.py  permissions.py  security.py
operant/app/db/: base.py  session.py
operant/app/db/migrations/: alembic.ini  env.py  script.py.mako
operant/app/db/migrations/versions/: 0001_initial.py
operant/app/models/: __init__.py  membership.py  organization.py  project.py  refresh_token.py  subscription.py  task.py  user.py
operant/app/repositories/: membership_repository.py  organization_repository.py  project_repository.py  refresh_token_repository.py  subscription_repository.py  task_repository.py  user_repository.py
operant/app/schemas/: auth.py  common.py  organizations.py  projects.py  tasks.py  users.py
operant/app/services/: auth_service.py  organization_service.py  project_service.py  task_service.py
operant/app/tests/: conftest.py  test_integration_flow.py  test_services_plan_limits.py
